--- a/assessment-qa-devops/package.json
+++ b/assessment-qa-devops/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +17,7 @@
     "express": "^4.17.1",
     "geckodriver": "^2.0.4",
     "jest": "^27.3.1",
-    "rollbar": "^2.24.0",
+    "rollbar": "^2.25.2",
     "selenium-webdriver": "^4.0.0",
     "ts-jest": "^27.0.7",
     "ts-node": "^10.4.0",
